# snakegame

./: .gitignore  .gitnore  CMakeLists.txt  README.md  note.txt  run.sh
src/: EpollServer.cpp  EpollServer.h  IMessageHandler.h  Protocol.h  Room.h  Snake.cpp  Snake.h  epoll_test.cpp  main.cpp  socket_test.cpp
src/game/: Food.cpp  Food.h  Map.h  Player.h  Room.cpp  Room.h  Snake.cpp  Snake.h
src/protocol/: Protocol.cpp  Protocol.h
src/server/: EpollServer.cpp  EpollServer.h  GameHandler.cpp  GameHandler.h  GameMessageHandler.cpp  IMessageHandler.h  INetworkSender.h  MessageQueue.h  NetworkSenderAdapter.cpp  NetworkSenderAdapter.h  RoomManager.cpp  RoomManager.h
src/utils/: ThreadPool.cpp  ThreadPool.h  ThreadPoolManager.cpp  ThreadPoolManager.h
